implementerade function input(message)
och för tillfälligt använder den prompt, för jag vet inte vilken annan vi ska använda.

jag ändrade output till outputCode(code)
och la till en vanlig output som var menad för text. inte färgade koder.

implementerade parseInput() som gör input till stora bokstäver och tar bort alla whitespace.
input använder parseInput()
byggde vidare på play()


